* Workaround for ZebraFish FOV tiling. * Set up (home) xystage on startup

--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/SequencingClasses/GUIComponents/XYSequencing.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/SequencingClasses/GUIComponents/XYSequencing.form
@@ -391,9 +391,10 @@
         <Component class="javax.swing.JComboBox" name="FOVPatternCombo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
+              <StringArray count="3">
                 <StringItem index="0" value="Spiral"/>
                 <StringItem index="1" value="Ring"/>
+                <StringItem index="2" value="ZFish"/>
               </StringArray>
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
