XYSequencing.form might have added focusCycleroot at line 239 by accident to quickpfbutton? Enabled the things on the prefind panel. XYSequencing.java - added a searchFOVtableModel for making the pre-find, and a couple of methods to get some info from the prefind panel. Also to generate the search spiral.
HCAPluginFrame.java - added a proto-prefind - ONLY POPULATES A TABLE FOR NOW! Also, the wait doesn't seem to work?
FOVTableModel.java - added method to get a particular FOV out.

--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/SequencingClasses/GUIComponents/XYSequencing.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/SequencingClasses/GUIComponents/XYSequencing.form
@@ -172,7 +172,6 @@
             <TitledBorder title="Prefind"/>
           </Border>
         </Property>
-        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
 
       <Layout>
@@ -237,7 +236,7 @@
         <Component class="javax.swing.JButton" name="quickPFButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Quick prefind"/>
-            <Property name="enabled" type="boolean" value="false"/>
+            <Property name="focusCycleRoot" type="boolean" value="true"/>
             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
               <Insets value="[2, 8, 2, 8]"/>
             </Property>
@@ -261,25 +260,21 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="text" type="java.lang.String" value="Intensity threshold value (DN)"/>
-            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
             <Property name="text" type="java.lang.String" value="Desired number of FOV/well"/>
-            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
             <Property name="text" type="java.lang.String" value="Attempts before failing"/>
-            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="FOVToFindField">
           <Properties>
             <Property name="text" type="java.lang.String" value="4"/>
-            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="FOVToFindFieldActionPerformed"/>
@@ -288,7 +283,6 @@
         <Component class="javax.swing.JFormattedTextField" name="attemptsField">
           <Properties>
             <Property name="text" type="java.lang.String" value="4"/>
-            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="attemptsFieldActionPerformed"/>
@@ -297,7 +291,6 @@
         <Component class="javax.swing.JFormattedTextField" name="intensityThresoldField">
           <Properties>
             <Property name="text" type="java.lang.String" value="1000"/>
-            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="intensityThresoldFieldActionPerformed"/>
