Hopefully fixed GotoFOV to deal with relative Z better... Added functions to relay variables around from private classes - hopefully that's ok

--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/SequencingClasses/GUIComponents/XYSequencing.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/SequencingClasses/GUIComponents/XYSequencing.form
@@ -120,6 +120,9 @@
           </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="fovTablePanel">
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="fovTablePanelMouseClicked"/>
+          </Events>
 
           <Layout>
             <DimensionLayout dim="0">
